# Salah-Widget

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/: main.py
src/salutk/: main.py
