[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sulatk"
version = "1.0.0"
authors = [
    {name = "Nothing"}
]
description = "A prayer times application written in Python with PyQt5"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "geocoder",
    "PyQt5"
]

[project.urls]
"Homepage" = "https://github.com"

[project.scripts]
sulatk = "sulatk.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"sulatk.assets" = ["*.ttf"]
